Skip to content

GitLab

  • Menu
Projects Groups Snippets
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • gst-plugins-bad gst-plugins-bad
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 985
    • Issues 985
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 132
    • Merge requests 132
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Monitor
    • Monitor
    • Incidents
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GStreamer
  • gst-plugins-badgst-plugins-bad
  • Issues
  • #1439

Closed
Open
Created Oct 25, 2020 by Matthieu De Beule@artectrexContributor

GstPlayer: Tell programmers that set_volume uses linear scale

gst_player_set_volume, and probably others, use a linear volume scale.

While this is not wrong per se, it would be nice to add a little comment in the documentation to alert programmers that a linear volume scale is not suitable for humans (a nice write-up on this: https://www.dr-lex.be/info-stuff/volumecontrols.html). For a widget with a volume slider for example, one should use a log scale.

I would have submitted a MR, but I don't know where to look so I thought this project wouldn't be too wrong to make an issue against.

Edited Oct 25, 2020 by Tim-Philipp Müller
Assignee
Assign to
Time tracking